--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   <img id="poster" src="assets/poster.jpg" alt="exhibition poster">
   <div class="exh_text">
     <div class="links">
-      <a id="social" href="https://www.instagram.com/thorn_apple_project/">instagram</a><br><br>
-      <a id="guide" href="#">click here for more information about the works and artists in the exhibition</a><br>
+      <a id="social" href="https://www.instagram.com/thorn_apple_project/" target="_blank">Instagram</a><br><br>
+      <a id="guide" href="assets/MAP.pdf" target="_blank">Click here for more information about the works and artists in the exhibition.</a><br>
     </div>
 
     <p>Dear visitor,</p>
